# fishmap

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-REVIEW-FINAL.md  DESIGN.md  Dockerfile.etl  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.node.tsbuildinfo  vercel.json  vite.config.ts
.github/ISSUE_TEMPLATE/: data-report.md  suggest-access.md
.github/workflows/: ci.yml  etl-dry-run.yml
data/: aoi.geojson
data/processed/: DATA-VERIFICATION.md  access_points_sample.geojson  manifest.json
docs/: ASSET-HOSTING.md  DATA-SCHEMA.md  DEVELOPMENT.md  ETL-RUNBOOK.md  ETL-SPEC.md  HOW-TO-ADD-NEW-SPOTS.md  LAUNCH-CHECKLIST.md  pmtiles-extract-dryrun.txt
scripts/: __init__.py  aoi.py  classify.py  download_raw.py  enrich.py  etl_sample.py  requirements.txt  tile.py  validate_sample.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
