[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fishmap-etl"
version = "0.1.0-pr1"
description = "Fishmap Python ETL (PR 1 bootstrap: reproducible sample + AOI + classification)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Fishmap Contributors"}]

dependencies = []

[project.optional-dependencies]
etl = [
    "shapely>=2.0",
    "pyproj>=3.6",
    # geopandas + gdal for full future ETL (PR6+); omitted here so sample runs light
    # "geopandas>=0.14",
]
dev = [
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter
